# contact-plugin

./: .crails  .gitignore  CMakeLists.txt  contact.description.json  contact.en.json  contact.es.json  contact.fr.json  prebuild.sh
app/: database.cpp  mailer.hpp  main.cpp  renderers.cpp  routes.cpp
app/controllers/: contact.cpp  contact.hpp
app/controllers/admin/: contact_page.cpp  contact_page.hpp
app/models/: contact_page.cpp  contact_page.hpp
app/views/admin/contact_page/: show.html
app/views/contact/: form.html  mail.html  sent.html
